name:                vk
version:             0.1.0.0
synopsis:            Complete Vulkan graphics API bindings
description:         Please see README.md
homepage:            https://github.com/Cosmostrix/vulkan#readme
license:             BSD3
license-file:        LICENSE
author:              Cosmostrix
maintainer:          cosmos@lunakit.org
copyright:           2016 Cosmostrix
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Vulkan.Bindings
  build-depends:       base >= 4.7 && < 5
                     , transformers >= 0.4
                     , half >= 0.2 && < 0.3
                     , fixed >= 0.2 && < 0.3
                     , linear >= 1.18 && < 1.24
                     , vector >= 0.11 && < 0.15
  default-language:    Haskell2010

--test-suite vulkan-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , vulkan
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Cosmostrix/vulkan
