name:                vulkan-apigen
version:             0.1.0.0
synopsis:            Vulkan binding generator
description:         Please see README.md
homepage:            https://github.com/Cosmostrix/vulkan
license:             LGPL3
license-file:        LICENSE
author:              Sorafukurou <cosmos@lunakit.org>
maintainer:          Sorafukurou <cosmos@lunakit.org>
copyright:           2016 lunakit.org
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable vulkan-apigen
  main-is:             Main.hs
  Other-modules:       Convertor
                     , VkParser
                     , VkRegistry
                     , VkManual

  build-depends:       base >= 4.8
                     , conduit >= 1.2
                     , hxt >= 9.3
                     , shakespeare >= 2.0
                     , resourcet >= 1.1
                     , text >= 1.2
                     , transformers >= 0.4
                     , xml-conduit >= 1.3
                     , data-default >= 0.5
                     , pandoc >= 1.16
                     , pandoc-types >= 1.16
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Cosmostrix/vulkan
